sg.tf
resource "aws_security_group" "vpc_ssh" {
    name = "vpc-ssh"
    description = "Dev VPC SSh"
    ingress {
        description = "Allow port 22"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0"]
    }
    egress {
        description = "Allow all Ip and Ports around"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
resource "aws_security_group" "vpc_web" {
    name = "vpc-web"
    description = "Dev VPC Web"
    ingress {
        description = "Allow port 80"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0"]
    }
    ingress {
        description = "Allow port 443"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0"]
    }
    egress {
        description = "Allow all Ip and Ports around"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
